Error overflow in file item content solved

--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -152,6 +152,7 @@
   border: 2px solid #010101;
   border-radius: .5rem;
   min-width: 200px;
+  max-width: 100%;
   height: min-content;
   color: #e1e1e1;
   padding: 10px;
@@ -162,6 +163,7 @@
 }
 .file-item-text-content {
   font-size: 1rem;
+  overflow-wrap: break-word;
 }
 
 .file-item-tash {
